feat: ⚡use preload

--- a/index.html
+++ b/index.html
@@ -4,9 +4,22 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/src/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite App</title>
+    <title>Virtual Living Room</title>
   </head>
   <body>
+    <link rel="preload" href="nx.jpg" type="image" />
+    <link rel="preload" href="ny.jpg" type="image" />
+    <link rel="preload" href="nz.jpg" type="image" />
+    <link rel="preload" href="pz.jpg" type="image" />
+    <link rel="preload" href="px.jpg" type="image" />
+    <link rel="preload" href="py.jpg" type="image" />
+    <link rel="preload" href="video.mp4" type="video/mp4" />
+    <link rel="preload" href="River Meditation.mp3" type="audio" />
+    <link rel="preload" href="simple_tv_remote/textures/Scene_-_Root_diffuse.png" type="image" />
+    <link rel="preload" href="simple_tv_remote/textures/Scene_-_Root_specularGlossiness.png" type="image" />
+    <link rel="preload" href="simple_tv_remote/textures/Scene_-_Root_occlusion.png" type="image" />
+    <link rel="preload" href="simple_tv_remote/scene.gltf" type="fetch" />
+    <link rel="preload" href="simple_tv_remote/scene.bin" type="fetch" />
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
